# ollama-func-calling

./: README.md  langchain_example.py  langchain_notebook.ipynb  llama_index_example.py  pyproject.toml  tools.py
