[tool.poetry]
name = "ollama-func-calling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.29"
openai = "^1.17.1"
llama-index-agent-openai = "^0.2.2"
llama-index-llms-openai = "^0.1.15"
llama-index-llms-ollama = "^0.1.2"
loguru = "^0.7.2"
langchain-openai = "^0.1.3"
langchain = "^0.1.16"
langchain-experimental = "^0.0.57"
ollama = "^0.1.8"
fire = "^0.6.0"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
pillow = "^10.3.0"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
